--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@ permalink: /projects/
 
         {% for item in site.portfolio %}
         <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="{{ item.link }}"> <img class="img-responsive" src="{{ item.image_path }}" alt="{{ item.project_name }}">
+            <a class="portfolio-link" id="project-01" href="#{{ item.projectID }}"> <img class="img-responsive" src="{{ item.image_path }}" alt="{{ item.project_name }}">
                 <div class="portfolio-item-caption">
                     <div class="portfolio-item-caption-content">
                         <h5 class="project-category">{{ item.category }}</h5>
@@ -20,4 +20,8 @@ permalink: /projects/
         </div>
         {% endfor %}
     </div>
+
+{% include modals.html %}
+
+
 </section>
