--- a/projects.html
+++ b/projects.html
@@ -12,8 +12,8 @@ permalink: /projects/
             <a class="portfolio-link" id="{{ item.projectID }}" href="#{{ item.modalID }}"> <img class="img-responsive" src="{{ item.image_path }}" alt="{{ item.project_name }}">
                 <div class="portfolio-item-caption">
                     <div class="portfolio-item-caption-content">
-                        <h5 class="project-category">{{ item.category }}</h5>
-                        <div class="project-name"> {{ item.project_name }}</div>
+                        <div class="project-category">{{ item.category }}</div>
+                        <h5 class="project-name"> {{ item.project_name }}</h5>
                     </div>
                 </div>
             </a>
