Changed portfolio architecture

--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@ permalink: /projects/
     <div class="row no-gutter portfolio-row">
 
         {% for item in site.portfolio %}
-        <div class="col-sm-4 portfolio-item">
+        <div class="col-xs-12 portfolio-item">
             <a class="portfolio-link" id="{{ item.projectID }}" href="#{{ item.modalID }}"> <img class="img-responsive" src="{{ item.image_path }}" alt="{{ item.project_name }}">
                 <div class="portfolio-item-caption">
                     <div class="portfolio-item-caption-content">
