Fixed responsiveness projects@

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@ title: What I do
 permalink: /projects/
 ---
 
-<section class="container-fluid" id="portfolio">
+<section class="container" id="portfolio">
     <div class="row no-gutter portfolio-row">
 
         {% for item in site.portfolio %}
