Removed Behance. Wrote post on 100DaysOfDesign

--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@ permalink: /work/
     <div class="row">
       <div class="col-xs-12 text-center">
       <a href="https://www.linkedin.com/{{site.author.linkedin}}"><h2 class="home-subtitle">...see my CV?</h2></a>
-      <a href="https://www.behance.net/{{ site.author.behance }}"><h2 class="home-subtitle">...see my design portfolio?</h2></a>
+      <!-- <a href="https://www.behance.net/{{ site.author.behance }}"><h2 class="home-subtitle">...see my design portfolio?</h2></a> -->
       <a href="http://www.github.com/{{site.author.github}}"><h2 class="home-subtitle">...look at my code?</h2></a>
       <a href="mailto:{{ site.author.email }}"><h2  class="home-subtitle">...contact me?</h2></a>
     </div>
