--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ permalink: /
 
 <section class="container ">
     <div class="row home">
-        <div class="col-md-12 "> <img class="img-responsive img-circle home-profile" src="http://img4.wikia.nocookie.net/__cb20140719193315/clubpenguin/images/d/d0/Llama.jpg" alt="A llama" />
+        <div class="col-md-12 "> <img class="img-responsive img-circle home-profile" src="../assets/images/alexgherardelli.jpg" alt="A llama" />
             <h1 class="home-title">Alessandra Gherardelli</h1>
             <h2 class="home-subtitle">Communications specialist by day,<br> geek by night</h2>
             <a class="btn btn-default" href="/work/">Work</a>
