--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@ title: Alessandra Gherardelli | Web communications + design
 permalink: /
 ---
 
-<section class="container ">
-    <div class="row home">
-        <div class="col-md-12 "> <img class="img-responsive img-circle home-profile" src="../assets/images/alexgherardelli.jpg" alt="A llama" />
-            <h1 class="home-title">Alessandra Gherardelli</h1>
-            <h2 class="home-subtitle">Communications specialist by day,<br> geek by night</h2>
+
+
+<section class="container">
+    <div class="row">
+        <div class="col-md-5"><img src="../assets/images/alexgherardelli.jpg" alt="Alessandra Gherardelli" class="img-responsive img-circle img-round-large"></div>
+        <div class="col-md-7">
+            <h1 class="accent larger-heading">Hello there!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, harum explicabo! Dolorum necessitatibus aspernatur, consequatur. Consequuntur iure dolorem quidem culpa ullam fugiat quas magnam, illum, iste! Quasi consequatur aspernatur praesentium.</p>
             <a class="btn btn-default" href="/work/">Work</a>
-            <a class="btn btn-default" href="/blog/">Blog</a> </div>
+
+        </div>
     </div>
 </section>
