--- a/work.html
+++ b/work.html
@@ -1,17 +1,16 @@
 ---
 layout: page
-title: Would like to...
+title: Work
 permalink: /work/
 ---
 
-<section class="container" id="portfolio">
-    <div class="row">
-      <div class="col-xs-12 text-center">
-      <a href="https://www.linkedin.com/{{site.author.linkedin}}"><h2 class="home-subtitle">...see my CV?</h2></a>
-      <!-- <a href="https://www.behance.net/{{ site.author.behance }}"><h2 class="home-subtitle">...see my design portfolio?</h2></a> -->
-      <a href="http://www.github.com/{{site.author.github}}"><h2 class="home-subtitle">...look at my code?</h2></a>
-      <a href="mailto:{{ site.author.email }}"><h2  class="home-subtitle">...contact me?</h2></a>
-    </div>
-    </div>
-</section>
-{% include modals.html %}
+<h2>Project title</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti molestias, similique, et quis atque fuga magnam perferendis cumque obcaecati dolores, architecto, voluptatum aliquid cupiditate cum. Voluptas laudantium veniam, earum dolores.</p>
+<h2>Project title</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti molestias, similique, et quis atque fuga magnam perferendis cumque obcaecati dolores, architecto, voluptatum aliquid cupiditate cum. Voluptas laudantium veniam, earum dolores.</p>
+<h2>Project title</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti molestias, similique, et quis atque fuga magnam perferendis cumque obcaecati dolores, architecto, voluptatum aliquid cupiditate cum. Voluptas laudantium veniam, earum dolores.</p>
+<h2>Project title</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti molestias, similique, et quis atque fuga magnam perferendis cumque obcaecati dolores, architecto, voluptatum aliquid cupiditate cum. Voluptas laudantium veniam, earum dolores.</p>
+<h2>Project title</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti molestias, similique, et quis atque fuga magnam perferendis cumque obcaecati dolores, architecto, voluptatum aliquid cupiditate cum. Voluptas laudantium veniam, earum dolores.</p>
