--- a/work.html
+++ b/work.html
@@ -4,13 +4,26 @@ title: Work
 permalink: /work/
 ---
 
-<h2>Project title</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti molestias, similique, et quis atque fuga magnam perferendis cumque obcaecati dolores, architecto, voluptatum aliquid cupiditate cum. Voluptas laudantium veniam, earum dolores.</p>
-<h2>Project title</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti molestias, similique, et quis atque fuga magnam perferendis cumque obcaecati dolores, architecto, voluptatum aliquid cupiditate cum. Voluptas laudantium veniam, earum dolores.</p>
-<h2>Project title</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti molestias, similique, et quis atque fuga magnam perferendis cumque obcaecati dolores, architecto, voluptatum aliquid cupiditate cum. Voluptas laudantium veniam, earum dolores.</p>
-<h2>Project title</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti molestias, similique, et quis atque fuga magnam perferendis cumque obcaecati dolores, architecto, voluptatum aliquid cupiditate cum. Voluptas laudantium veniam, earum dolores.</p>
-<h2>Project title</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti molestias, similique, et quis atque fuga magnam perferendis cumque obcaecati dolores, architecto, voluptatum aliquid cupiditate cum. Voluptas laudantium veniam, earum dolores.</p>
+<h2 class="ligher-heading-upper" >Current position</h2>
+{% for task in site.work %}
+  <h3>{{ task.title}}</h3>
+  <p>
+    {{ task.content }}
+  </p>
+{% endfor%}
+
+<h2 class="ligher-heading-upper" >Projects</h32>
+{% for project in site.projects %}
+  <h3>{{ project.title}}</h3>
+  <p>
+    {{ project.content }}
+  </p>
+{% endfor%}
+
+<h2 class="ligher-heading-upper" >Past positions</h2>
+{% for position in site.past-positions %}
+  <h3>{{ position.title}}</h3>
+  <p>
+    {{ position.content }}
+  </p>
+{% endfor%}
