--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 layout: default
 title: Alessandra Gherardelli | Web communications + design
 permalink: /
+class: main
 ---
 
 
 
-<section class="container">
+<section class="container {{ page.class }}">
     <div class="row">
         <div class="col-md-5"><img src="../assets/images/alexgherardelli.jpg" alt="Alessandra Gherardelli" class="img-responsive img-circle img-round-large"></div>
         <div class="col-md-7">
             <h1 class="accent larger-heading">Hello there!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, harum explicabo! Dolorum necessitatibus aspernatur, consequatur. Consequuntur iure dolorem quidem culpa ullam fugiat quas magnam, illum, iste! Quasi consequatur aspernatur praesentium.</p>
-            <a class="btn btn-default" href="/work/">Work</a>
+            <p>My name is Alessandra Gherardelli, I'm a tech-savvy digital marketer with an eye for well-crafted design. I'm currently working at FAO, but I am always open to new projects and challenges.
+ 
+I build websites, design stuff and help non-profits organization improve their online presence to reach their communications goal faster.
+</p>
+<div class="center">
+            <a class="btn btn-default" href="/work/">Discover my work</a></div>
 
         </div>
     </div>
