--- a/work.html
+++ b/work.html
@@ -1,29 +1,42 @@
 ---
-layout: page
+layout: default
 title: Work
 permalink: /work/
 ---
 
-<h2 class="ligher-heading-upper" >Current position</h2>
-{% for task in site.work %}
-  <h3>{{ task.title}}</h3>
-  <p>
-    {{ task.content }}
-  </p>
-{% endfor%}
 
-<h2 class="ligher-heading-upper" >Projects</h32>
-{% for project in site.projects %}
-  <h3>{{ project.title}}</h3>
-  <p>
-    {{ project.content }}
-  </p>
-{% endfor%}
+<section class="container">
+        <div class="col-md-5 text-center"><h1 class="accent">{{page.title}}</h1>
+        <a class="btn btn-default" href="http://www.linkedin.com/in/{{ site.author.linkedin }}" target="_blank">See my CV</a>
+        
+        </div>
+        <div class="col-md-7 col-sm-12">
+              <h2 class="ligher-heading-upper" >Current position</h2>
+              {% for task in site.work %}
+                <h3>{{ task.title}}</h3>
+                <p>
+                  {{ task.content }}
+                </p>
+              {% endfor%}
 
-<h2 class="ligher-heading-upper" >Past positions</h2>
-{% for position in site.past-positions %}
-  <h3>{{ position.title}}</h3>
-  <p>
-    {{ position.content }}
-  </p>
-{% endfor%}
+              <h2 class="ligher-heading-upper" >Projects</h32>
+              {% for project in site.projects %}
+                <h3>{{ project.title}}</h3>
+                <p>
+                  {{ project.content }}
+                </p>
+              {% endfor%}
+
+              <h2 class="ligher-heading-upper" >Past positions</h2>
+              {% for position in site.past-positions %}
+                <h3>{{ position.title}}</h3>
+                <p>
+                  {{ position.content }}
+                </p>
+              {% endfor%}
+
+
+
+        </div>
+</section>
+
