--- a/contacts.html
+++ b/contacts.html
@@ -1,5 +1,20 @@
 ---
 layout: page
 title: Contacts
+permalink: /contacts/
 ---
+<br/><br/>
+<p>I'd love to hear from you. If you have questions, comments or would like to discuss a project, feel free to contact me at <a id="contact" href="mailto:alessandra.gherardelli@gmail.com">{{site.author.email}}</a>
+</p>
 
+<form action="https://formspree.io/d1292593@mvrht.net" method="POST">
+  <div class="form-group">
+    <label for="email">Email address</label>
+    <input type="email" class="form-control" id="email" placeholder="j.smith@example.com">
+  </div>
+    <div class="form-group">
+        <label for="message">Message</label>
+        <textarea class="form-control" placeholder="Your awesome message" id="message" rows="6"></textarea>
+  </div>
+  <button class="btn bnt-default" type="submit">Send!</button>
+</form>
