Minor fix of CV button in responsive mode

--- a/work.html
+++ b/work.html
@@ -7,8 +7,7 @@ permalink: /work/
 
 <section class="container">
         <div class="col-md-5 text-center"><h1 class="accent">{{page.title}}</h1>
-        <a class="btn btn-default" href="http://www.linkedin.com/in/{{ site.author.linkedin }}" target="_blank">See my CV</a>
-        
+        <a class="btn btn-default" id="cv-big" href="http://www.linkedin.com/in/{{ site.author.linkedin }}" target="_blank">See my CV</a>
         </div>
         <div class="col-md-7 col-sm-12">
               <h2 class="ligher-heading-upper" >Current position</h2>
@@ -34,6 +33,7 @@ permalink: /work/
                   {{ position.content }}
                 </p>
               {% endfor%}
+        <a class="btn btn-default" id="cv-small" href="http://www.linkedin.com/in/{{ site.author.linkedin }}" target="_blank">See my CV</a>
 
 
 
