--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,10 @@
 ---
 layout: page
 title: Blog
+pagination: 
+  enabled: true
 ---
-{% for post in site.posts %}
+{% for post in paginator.posts %}
 <a class="blog-article" href="{{ post.url }}">
   <div class="blog-post">
     <div class="blog-title">
@@ -15,3 +17,22 @@ title: Blog
 </a>
 
 {% endfor %}
+
+
+<div class="paginator">
+{% if paginator.total_pages > 1 %}
+
+  {% if paginator.previous_page %}
+
+    <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}">
+      <i class="fa fa-chevron-left" aria-hidden="true"></i> Previous page
+</a>
+  {% endif %}
+  {% if paginator.next_page %}
+
+    <a href="{{ paginator.next_page_path | prepend: site.baseurl }}"><i class="fa fa-chevron-right" aria-hidden="true"></i> Next page</a>
+
+  {% endif %}
+
+{% endif %}
+</div>
