--- a/blog.html
+++ b/blog.html
@@ -24,13 +24,12 @@ pagination:
 
   {% if paginator.previous_page %}
 
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}">
-      <i class="fa fa-chevron-left" aria-hidden="true"></i> Previous page
-</a>
+    <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}"> 
+      <i class="fa fa-chevron-left" aria-hidden="true"></i> Previous page </a>
   {% endif %}
-  {% if paginator.next_page %}
-
-    <a href="{{ paginator.next_page_path | prepend: site.baseurl }}"><i class="fa fa-chevron-right" aria-hidden="true"></i> Next page</a>
+  
+    {% if paginator.next_page %}
+      <a href="{{ paginator.next_page_path | prepend: site.baseurl }}">Next page  <i class="fa fa-chevron-right" aria-hidden="true"></i>  </a>
 
   {% endif %}
 
