--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@ class: main
 <section class="container {{ page.class }}">
     <div class="row">
         <div class="col-md-5"><img src="../assets/images/alexgherardelli.jpg" alt="Alessandra Gherardelli" class="img-responsive img-circle img-round-large"></div>
-        <div class="col-md-7">
+        <div class="col-md-6">
             <h1 class="accent larger-heading">Hello there!</h1>
-            <p>My name is Alessandra Gherardelli, I'm a tech-savvy digital marketer with an eye for well-crafted design. I'm currently working at FAO, but I am always open to new projects and challenges.
+            <p>My name is Alessandra Gherardelli, I'm a tech-savvy digital marketer with an eye for well-crafted design. 
+            
+            <!--I'm currently working at FAO, but I am always open to new projects and challenges.-->
  
-I build websites, design stuff and help non-profits organization improve their online presence to reach their communications goal faster.
+I build websites, design stuff and help non-profits organization improve their online presence to reach their communication goals faster.
 </p>
 <div class="center">
             <a class="btn btn-default" href="/work/">Discover my work</a></div>
