--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@ permalink: /work/
         <div class="col-md-7 col-sm-12">
               <h2 class="ligher-heading-upper" >Current position</h2>
               {% for task in site.work %}
-                <h3>{{ task.title}}</h3>
+                <a href="{{ task.link }}"><h3>{{ task.title}}</h3></a>
                 <p>
                   {{ task.content }}
                 </p>
