Added few projects to portfolio + removed Evergreen

--- a/work.html
+++ b/work.html
@@ -18,7 +18,7 @@ permalink: /work/
                 </p>
               {% endfor%}
 
-              <h2 class="ligher-heading-upper" >Projects</h32>
+              <h2 class="ligher-heading-upper" >Web development side projects</h32>
               {% for project in site.projects %}
                 <h3>{{ project.title}}</h3>
                 <p>
