--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Alessandra Gherardelli | Web communications + design
+title: Alessandra Gherardelli | Communications + Data + Design
 permalink: /
 class: main
 ---
@@ -12,11 +12,9 @@ class: main
         <div class="col-md-5"><img src="../assets/images/alexgherardelli.jpg" alt="Alessandra Gherardelli" class="img-responsive img-circle img-round-large"></div>
         <div class="col-md-6">
             <h1 class="accent larger-heading">Hello there!</h1>
-            <p>My name is Alessandra Gherardelli, I'm a tech-savvy digital marketer with an eye for well-crafted design. 
-            
-            <!--I'm currently working at FAO, but I am always open to new projects and challenges.-->
- 
-I build websites, design stuff and help non-profits organization improve their online presence to reach their communication goals faster.
+            <p>My name is Alessandra Gherardelli, I am a tech-savvy professional with 7 years of experience in driving communications and information management projects in international organizations. 
+
+Currently I work for the World Food Programme (WFP), the leading humanitarian agency fighting hunger in 80+ countries and recipient of the 2020 Nobel Peace Prize.
 </p>
 <div class="center">
             <a class="btn btn-default" href="/work/">Discover my work</a></div>
