--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@ permalink: /work/
         <a class="btn btn-default" id="cv-big" href="http://www.linkedin.com/in/{{ site.author.linkedin }}" target="_blank">See my CV</a>
         </div>
         <div class="col-md-7 col-sm-12">
-              <h2 class="ligher-heading-upper" >Current position</h2>
+              <!-- <h2 class="ligher-heading-upper" >Current position</h2> -->
               {% for task in site.work %}
                 {% if task.link %}<a href="{{ task.link }}"> {% endif %} <h3>{{ task.title}}</h3>{% if task.link %}</a>{% endif %}
                 <p>
@@ -18,15 +18,7 @@ permalink: /work/
                 </p>
               {% endfor%}
 
-              <h2 class="ligher-heading-upper" >Web development side projects</h32>
-              {% for project in site.projects %}
-                <h3>{{ project.title}}</h3>
-                <p>
-                  {{ project.content }}
-                </p>
-              {% endfor%}
-
-              <h2 class="ligher-heading-upper" >Past positions</h2>
+              <!-- <h2 class="ligher-heading-upper" >Past positions</h2> -->
               {% for position in site.past-positions %}
                 <h3>{{ position.title}}</h3>
                 <p>
