--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,11 @@ layout: page
 title: Contacts
 permalink: /contacts/
 ---
-<br/><br/>
+
+<section class="container ">
+  <div class="row center">
+        <div class="col-md-8 col-sm-12 ">
+          <h1 class="larger-heading accent">Contact me</h1>
 <p>I'd love to hear from you. If you have questions, comments or would like to discuss a project, feel free to <a id="contact" href="mailto:{{ site.author.email | encode_email }}" >email me</a>
 </p>
 
@@ -18,3 +22,6 @@ permalink: /contacts/
   </div>
   <button class="btn bnt-default" type="submit">Send!</button>
 </form>
+</div>
+</div>
+</section>
