--- a/articles.html
+++ b/articles.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Blog
+title: Articles
 pagination: 
   enabled: true
 ---
@@ -10,7 +10,7 @@ pagination:
     <div class="blog-title">
       <h2>{{ post.title }}</h2>
       {% if post.subtitle%}
-      <h3 class="lighter-heading"> {{post.subtitle}} </h3>
+      <h3 class="subtitle"> {{post.subtitle}} </h3>
       {% endif %}
     </div>
   </div>
