--- a/articles.html
+++ b/articles.html
@@ -4,7 +4,9 @@ title: Articles
 pagination: 
   enabled: true
 ---
+<h1 class="larger-heading accent">{{page.title}}</h1>
 {% for post in site.posts %}
+
 <a class="blog-article" href="{{ post.url }}">
   <div class="blog-post">
     <div class="blog-title">
