--- a/contacts.html
+++ b/contacts.html
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: Contacts
+title: Contact me
 permalink: /contacts/
 ---
 
 <section class="container ">
   <div class="row center">
         <div class="col-md-8 col-sm-12 ">
-          <h1 class="larger-heading accent">Contact me</h1>
+          <h1 class="larger-heading accent">{{ page.title }}</h1>
 <p>I'd love to hear from you. If you have questions, comments or would like to discuss a project, feel free to <a id="contact" href="mailto:{{ site.author.email | encode_email }}" >email me</a>
 </p>
 
