--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@ class: main
             <h1 class="accent larger-heading">Hello there!</h1>
             <h3>I'm {{ site.author.name}}</h3>
             <p> {{site.author.description}} </p>
-<div class="center">
-                <h4 class="lighter-heading">Find me on  </h3>
-                                <div class="social-buttons">
+
+ <h4 class="lighter-heading">Find me on  </h3>
+               
+                    <div class="social-buttons">
                     {% if site.author.email %}
                     <a class="no-decoration" href="mailto:{{ site.author.email | encode_email }}" >
-                        <p class="social"><i class="fa fa-envelope-o  fa-2xl" aria-hidden="true"></i>
+                        <p class="social"> <i class="fa fa-envelope-o  fa-2xl" aria-hidden="true"></i>
 </p>
                     </a>
                     {% endif %} {% if site.author.facebook %}
@@ -39,13 +40,13 @@ class: main
                     </a> {% endif %} 
                     {% if site.author.linkedin %}
                     <a class="no-decoration" href="http://www.linkedin.com/in/{{ site.author.linkedin }}">
-                        <p class="social"> LinkedIn<i class="fa fa-linkedin fa-2xl" aria-hidden="true"></i>
+                        <p class="social"> <i class="fa fa-linkedin fa-2xl" aria-hidden="true"></i>
 
 </p>
                     </a> {% endif %} 
                  {% if site.author.github %}
                     <a class="no-decoration" href="http://github.com/{{ site.author.github}}">
-                        <p class="social"> GitHub<i class="fa fa-github fa-2xl" aria-hidden="true"></i>
+                        <p class="social"><i class="fa fa-github fa-2xl" aria-hidden="true"></i>
 </p>
                     </a>
                     {% endif %} {% if site.author.dribbble %}
