--- a/index.html
+++ b/index.html
@@ -5,66 +5,84 @@ permalink: /
 class: main
 ---
 
-
-
 <section class="container {{ page.class }}">
     <div class="row">
-        <div class="col-md-5"><img src="../assets/images/alexgherardelli.png" alt= {{ site.author.name}} class="img-responsive img-circle img-round-large"></div>
+        <div class="col-md-5"><img src="../assets/images/alexgherardelli.png"
+                alt= {{ site.author.name}} class="img-responsive img-circle
+                img-round-large"></div>
         <div class="col-md-6">
             <h1 class="accent larger-heading">Hello there!</h1>
             <h3>I'm {{ site.author.name}}</h3>
             <p> {{site.author.description}} </p>
 
- <h4 class="lighter-heading">Find me on  </h3>
-               
-                    <div class="social-buttons">
-                    {% if site.author.email %}
-                    <a class="no-decoration" href="mailto:{{ site.author.email | encode_email }}" >
-                        <p class="social"> <i class="fa fa-envelope-o  fa-2xl" aria-hidden="true"></i>
-</p>
-                    </a>
-                    {% endif %} {% if site.author.facebook %}
-                    <a class="no-decoration" href="http://www.facebook.com/{{ site.author.facebook }}">
-                        <p class="social"><i class="fa fa-facebook fa-2xl" aria-hidden="true"></i>
-</p>
-                    </a> {% endif %} 
-                    {% if site.author.twitter %}
-                    <a class="no-decoration" href="http://www.twitter.com/{{ site.author.twitter }}">
-                        <p class="social"><i class="fa fa-twitter fa-2xl" aria-hidden="true"></i>
-;</p>
-                    </a> {% endif %} 
-                    {% if site.author.medium %}
-                    <a  class="no-decoration"href="http://www.medium.com/@{{ site.author.medium }}">
-                        <p class="social"><i class="fa fa-medium fa-2xl" aria-hidden="true"></i>
-</p>
-                    </a> {% endif %} 
-                    {% if site.author.linkedin %}
-                    <a class="no-decoration" href="http://www.linkedin.com/in/{{ site.author.linkedin }}">
-                        <p class="social"> <i class="fa fa-linkedin fa-2xl" aria-hidden="true"></i>
+            <h4 class="lighter-heading">Find me on </h3>
 
-</p>
-                    </a> {% endif %} 
-                 {% if site.author.github %}
-                    <a class="no-decoration" href="http://github.com/{{ site.author.github}}">
-                        <p class="social"><i class="fa fa-github fa-2xl" aria-hidden="true"></i>
-</p>
-                    </a>
-                    {% endif %} {% if site.author.dribbble %}
-                    <a class="no-decoration" href="https://dribbble.com/{{ site.author.dribbble }}">
-                        <p class="social"><i class="fa fa-dribbble fa-2xl" aria-hidden="true"></i></p>
-                    </a>
-                    {% endif %} {% if site.author.behance %}
-                    <a class="no-decoration" href="https://www.behance.net/{{ site.author.behance }}">
-                        <p class="social smaller"><i class="fa fa-behance fa-2xl" aria-hidden="true"></i>
-</p>
-                    </a>
-                    {% endif %} {% if site.author.tableau %}
-                    <a class="no-decoration" href="https://www.tableau.com/{{ site.author.tableau }}">
-                        <p class="social smaller"><i class="fa fa-tableau fa-2xl" aria-hidden="true"></i>
-</p>
-                    </a>
-                    {% endif %}
-                </div>
+            <div class="social-buttons">
+                {% if site.author.email %}
+                <a class="no-decoration" href="mailto:{{ site.author.email |
+                    encode_email }}">
+                    <p class="social"> <i class="fa fa-envelope-o fa-2xl"
+                            aria-hidden="true"></i>
+                    </p>
+                </a>
+                {% endif %} {% if site.author.facebook %}
+                <a class="no-decoration" href="http://www.facebook.com/{{
+                    site.author.facebook }}">
+                    <p class="social"><i class="fa fa-facebook fa-2xl"
+                            aria-hidden="true"></i>
+                    </p>
+                </a> {% endif %}
+                {% if site.author.twitter %}
+                <a class="no-decoration" href="http://www.twitter.com/{{
+                    site.author.twitter }}">
+                    <p class="social"><i class="fa fa-twitter fa-2xl"
+                            aria-hidden="true"></i>
+                        ;</p>
+                </a> {% endif %}
+                {% if site.author.medium %}
+                <a class="no-decoration" href="http://www.medium.com/@{{
+                    site.author.medium }}">
+                    <p class="social"><i class="fa fa-medium fa-2xl"
+                            aria-hidden="true"></i>
+                    </p>
+                </a> {% endif %}
+                {% if site.author.linkedin %}
+                <a class="no-decoration" href="http://www.linkedin.com/in/{{
+                    site.author.linkedin }}">
+                    <p class="social"> <i class="fa fa-linkedin fa-2xl"
+                            aria-hidden="true"></i>
+
+                    </p>
+                </a> {% endif %}
+                {% if site.author.github %}
+                <a class="no-decoration" href="http://github.com/{{
+                    site.author.github}}">
+                    <p class="social"><i class="fa fa-github fa-2xl"
+                            aria-hidden="true"></i>
+                    </p>
+                </a>
+                {% endif %} {% if site.author.dribbble %}
+                <a class="no-decoration" href="https://dribbble.com/{{
+                    site.author.dribbble }}">
+                    <p class="social"><i class="fa fa-dribbble fa-2xl"
+                            aria-hidden="true"></i></p>
+                </a>
+                {% endif %} {% if site.author.behance %}
+                <a class="no-decoration" href="https://www.behance.net/{{
+                    site.author.behance }}">
+                    <p class="social smaller"><i class="fa fa-behance fa-2xl"
+                            aria-hidden="true"></i>
+                    </p>
+                </a>
+                {% endif %} {% if site.author.tableau %}
+                <a class="no-decoration" href="https://www.tableau.com/{{
+                    site.author.tableau }}">
+                    <p class="social smaller"><i class="fa fa-tableau fa-2xl"
+                            aria-hidden="true"></i>
+                    </p>
+                </a>
+                {% endif %}
+            </div>
 
         </div>
     </div>
