New article on Tableau

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Alessandra Gherardelli | Web communications + design
+title: Alessandra Gherardelli | Product manager 
 permalink: /
 class: main
 ---
