Aligned project and post layout

--- a/articles.html
+++ b/articles.html
@@ -10,9 +10,12 @@ enabled: true
 <a class="blog-article" href="{{ post.url }}">
   <div class="blog-post">
     <div class="blog-title">
-      <h2>{{ post.title }}</h2>
+      {% if post.date %} 
+      <p class="post_date"> {{ post.date | date: "%-d %B %Y" }} </p>
+      {% endif %}
+      <h2 class="post_title">{{ post.title }}</h2>
       {% if post.subtitle%}
-      <h3 class="subtitle"> {{post.subtitle}} </h3>
+      <h3 class="post_subtitle"> {{post.subtitle}} </h3>
       {% endif %}
     </div>
   </div>
