--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Alessandra Gherardelli | Product manager 
+title: Alessandra Gherardelli | Product manager & Project Coordinator
 permalink: /
 class: main
 ---
